<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="#FFFFFF">

    <TextView
        android:id="@+id/tvExpression"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="24sp"
        android:gravity="end"
        android:textColor="#000000"
        android:padding="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="32sp"
        android:textStyle="bold"
        android:gravity="end"
        android:textColor="#000000"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@id/tvExpression"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginVertical="16dp"  app:layout_constraintBottom_toTopOf="@id/gridNewButtons" /> <GridLayout
    android:id="@+id/gridNewButtons"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:columnCount="4"
    android:rowCount="1"
    android:alignmentMode="alignMargins"
    android:useDefaultMargins="true"
    app:layout_constraintBottom_toTopOf="@id/gridButtons" app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:layout_marginBottom="8dp">

    <Button android:id="@+id/btnClear" android:text="@string/button_clear" style="@style/CalcButton" android:layout_height="65dp"/>
    <Button android:id="@+id/btnParentheses" android:text="@string/button_parentheses" style="@style/CalcButton" android:layout_height="65dp"/>
    <Button android:id="@+id/btnPercent" android:text="@string/button_percent" style="@style/CalcButton" android:layout_height="65dp"/>
    <Button android:id="@+id/btnDelete" android:text="@string/button_del" style="@style/CalcButton" android:layout_height="65dp"/>

</GridLayout>

    <GridLayout
        android:id="@+id/gridButtons"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:columnCount="4"
        android:rowCount="5"
        android:alignmentMode="alignMargins"
        android:useDefaultMargins="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button android:id="@+id/btn7" android:text="@string/button_7" style="@style/CalcButton"/>

        <Button android:id="@+id/btn8" android:text="@string/button_8" style="@style/CalcButton" android:layout_height="65dp"/>
        <Button android:id="@+id/btn9" android:text="@string/button_9" style="@style/CalcButton" android:layout_height="65dp"/>
        <Button android:id="@+id/btnAdd" android:text="@string/button_add" style="@style/CalcButton" android:layout_height="65dp"/>

        <Button android:id="@+id/btn4" android:text="@string/button_4" style="@style/CalcButton" android:layout_height="65dp"/>
        <Button android:id="@+id/btn5" android:text="@string/button_5" style="@style/CalcButton" android:layout_height="65dp"/>
        <Button android:id="@+id/btn6" android:text="@string/button_6" style="@style/CalcButton" android:layout_height="65dp"/>
        <Button android:id="@+id/btnSub" android:text="@string/button_subtract" style="@style/CalcButton" android:layout_height="65dp"/>

        <Button android:id="@+id/btn1" android:text="@string/button_1" style="@style/CalcButton" android:layout_height="65dp"/>
        <Button android:id="@+id/btn2" android:text="@string/button_2" style="@style/CalcButton" android:layout_height="65dp"/>
        <Button android:id="@+id/btn3" android:text="@string/button_3" style="@style/CalcButton" android:layout_height="65dp"/>
        <Button android:id="@+id/btnMul" android:text="@string/button_multiply" style="@style/CalcButton" android:layout_height="65dp"/>

        <Button android:id="@+id/btn0" android:text="@string/button_0" style="@style/CalcButton" android:layout_height="65dp"/>
        <Button android:id="@+id/btnDot" android:text="@string/button_dot" style="@style/CalcButton" android:layout_height="65dp"/>
        <Button android:id="@+id/btnEq" android:text="@string/button_equals" style="@style/CalcButton" android:layout_height="65dp"/>
        <Button android:id="@+id/btnDiv" android:text="@string/button_divide" style="@style/CalcButton" android:layout_height="65dp"/>
    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>